--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,16 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@components/*": ["components/*"],
+      "@utils/*": ["utils/*"],
+      "@pages/*": ["pages/*"],
+      "@context/*": ["context/*"],
+      "@types/*": ["types/*"],
+      "@routes/*": ["routes/*"],
+      "@assets/*": ["assets/*"],
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -21,6 +31,6 @@
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
